add_executable(exercise_01 exercise_01.cpp)
add_executable(exercise_02 exercise_02.cpp)
add_executable(exercise_03 exercise_03.cpp)
add_executable(exercise_04 exercise_04.cpp)
add_executable(exercise_05 exercise_05.cpp)
add_executable(exercise_09 exercise_09.cpp)
add_executable(exercise_10 exercise_10.cpp)
add_executable(exercise_11 exercise_11.cpp)
add_executable(exercise_13a exercise_13a.cpp)
add_executable(exercise_13b exercise_13b.cpp)
add_executable(exercise_13c exercise_13c.cpp)
add_executable(exercise_16 exercise_16.cpp)
add_executable(exercise_18 exercise_18.cpp)
add_executable(exercise_19 exercise_19.cpp)
add_executable(exercise_20 exercise_20.cpp)
add_executable(exercise_21 exercise_21.cpp)
add_executable(exercise_21b exercise_21b.cpp)
add_executable(exercise_22 exercise_22.cpp)
add_executable(exercise_22b exercise_22b.cpp)
add_executable(exercise_23 exercise_23.cpp)
add_executable(exercise_25 exercise_25.cpp)
