add_executable(exercise_04 exercise_04.cpp)
add_executable(exercise_08 exercise_08.cpp)
add_executable(exercise_18 exercise_18.cpp)
add_executable(exercise_34 exercise_34.cpp)
add_executable(exercise_35 exercise_35.cpp)
add_executable(exercise_40 exercise_40.cpp)
add_executable(exercise_41a exercise_41a.cpp)
add_executable(exercise_41b exercise_41b.cpp)
add_executable(exercise_41c exercise_41c.cpp)
add_executable(exercise_41d exercise_41d.cpp)
add_executable(exercise_41f exercise_41f.cpp)
add_executable(exercise_42a exercise_42a.cpp)
add_executable(exercise_42b exercise_42b.cpp)
add_executable(exercise_42c exercise_42c.cpp)
add_executable(exercise_42d exercise_42d.cpp)
add_executable(exercise_42f exercise_42f.cpp)
