add_executable(exercise_01a exercise_01a.cpp)
add_executable(exercise_01b exercise_01b.cpp)
add_executable(exercise_01c exercise_01c.cpp)
add_executable(exercise_01d exercise_01d.cpp)
add_executable(exercise_01e exercise_01e.cpp)
add_executable(exercise_01f exercise_01f.cpp)
add_executable(exercise_01g exercise_01g.cpp)
add_executable(exercise_01h exercise_01h.cpp)
add_executable(exercise_02a exercise_02a.cpp)
add_executable(exercise_02b exercise_02b.cpp)
add_executable(exercise_04a exercise_04a.cpp)
add_executable(exercise_04b exercise_04b.cpp)
add_executable(exercise_05a exercise_05a.cpp)
add_executable(exercise_05b exercise_05b.cpp)
add_executable(exercise_06 exercise_06.cpp)
add_executable(exercise_07 exercise_07.cpp)
add_executable(exercise_08a exercise_08a.cpp)
add_executable(exercise_08b exercise_08b.cpp)
add_executable(exercise_10 exercise_10.cpp)
add_executable(exercise_14 exercise_14.cpp)
add_executable(exercise_15 exercise_15.cpp)
add_executable(exercise_16 exercise_16.cpp)
add_executable(exercise_17 exercise_17.cpp)
add_executable(exercise_20a exercise_20a.cpp)
add_executable(exercise_20b exercise_20b.cpp)
add_executable(exercise_21 exercise_21.cpp)
add_executable(exercise_22 exercise_22.cpp)
add_executable(exercise_23 exercise_23.cpp)
add_executable(exercise_24a exercise_24a.cpp)
add_executable(exercise_24b exercise_24b.cpp)
add_executable(exercise_25 exercise_25.cpp)
add_executable(exercise_31 exercise_31.cpp)
add_executable(exercise_32a exercise_32a.cpp)
add_executable(exercise_32b exercise_32b.cpp)
add_executable(exercise_35 exercise_35.cpp)
add_executable(exercise_36a exercise_36a.cpp)
add_executable(exercise_36b exercise_36b.cpp)
add_executable(exercise_39a exercise_39a.cpp)
add_executable(exercise_39b exercise_39b.cpp)
add_executable(exercise_40 exercise_40.cpp)
add_executable(exercise_41 exercise_41.cpp)
add_executable(exercise_42 exercise_42.cpp)
add_executable(exercise_43a exercise_43a.cpp)
add_executable(exercise_43b exercise_43b.cpp)
add_executable(exercise_43c exercise_43c.cpp)
add_executable(exercise_44a exercise_44a.cpp)
add_executable(exercise_44b exercise_44b.cpp)
add_executable(exercise_45c exercise_45c.cpp)
add_executable(exercise_45a exercise_45a.cpp)
add_executable(exercise_45b exercise_45b.cpp)
add_executable(exercise_44c exercise_44c.cpp)
