add_executable(exercise_03 exercise_03.cpp)
add_executable(exercise_05 exercise_05.cpp)
add_executable(exercise_06 exercise_06.cpp)
add_executable(exercise_09 exercise_09.cpp)
add_executable(exercise_10a exercise_10a.cpp)
add_executable(exercise_10b exercise_10b.cpp)
add_executable(exercise_11 exercise_11.cpp)
add_executable(exercise_12 exercise_12.cpp)
add_executable(exercise_14 exercise_14.cpp)
add_executable(exercise_16a exercise_16a.cpp)
add_executable(exercise_16b exercise_16b.cpp)
add_executable(exercise_16c exercise_16c.cpp)
add_executable(exercise_16d exercise_16d.cpp)
add_executable(exercise_17 exercise_17.cpp)
add_executable(exercise_20 exercise_20.cpp)
add_executable(exercise_21 exercise_21.cpp)
add_executable(exercise_23 exercise_23.cpp)
add_executable(exercise_24 exercise_24.cpp)
add_executable(exercise_25 exercise_25.cpp)
