add_executable(exercise_03 exercise_03.cpp)
add_executable(exercise_04 exercise_04.cpp)
add_executable(exercise_05 exercise_05.cpp)
add_executable(exercise_07 exercise_07.cpp)
add_executable(factorial fact.cpp factMain.cpp)
add_executable(exercise_10 exercise_10.cpp)
add_executable(exercise_11 exercise_11.cpp)
add_executable(exercise_12 exercise_12.cpp)
add_executable(exercise_17a exercise_17a.cpp)
add_executable(exercise_17b exercise_17b.cpp)
add_executable(exercise_21 exercise_21.cpp)
add_executable(exercise_22 exercise_22.cpp)
add_executable(exercise_23 exercise_23.cpp)
add_executable(exercise_25 exercise_25.cpp)
add_executable(exercise_26 exercise_26.cpp)
add_executable(exercise_27 exercise_27.cpp)
add_executable(exercise_33 exercise_33.cpp)
add_executable(exercise_34 exercise_34.cpp)
add_executable(exercise_37 exercise_37.cpp)
add_executable(exercise_42 exercise_42.cpp)
add_executable(exercise_47 exercise_47.cpp)
add_executable(exercise_51 exercise_51.cpp)
add_executable(exercise_55 exercise_55.cpp)

