add_executable(exercise_01 exercise_01.cpp)
add_executable(exercise_02 exercise_02.cpp)
add_executable(exercise_03 exercise_03.cpp)
add_executable(exercise_07 exercise_07.cpp)
add_executable(exercise_11 exercise_11.cpp)
add_executable(exercise_13 exercise_13.cpp)
add_executable(exercise_27 exercise_27.cpp)
add_executable(exercise_29 exercise_29.cpp)

